@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package jp.furplag.time.lunisolar;
 
 import java.io.Serializable;
@@ -20,15 +21,16 @@ import java.time.temporal.ValueRange;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-
-import javax.annotation.Nonnull;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import jp.furplag.data.json.Jsonifier;
-import jp.furplag.stream.streamr.Streamizr;
+import jp.furplag.sandbox.stream.Streamr;
 import jp.furplag.time.lunisolar.SolarTerm.PreClimate;
 
 /**
@@ -65,12 +67,18 @@ public final class LunarMonth implements Comparable<LunarMonth>, Serializable {
   @JsonProperty(index = 0)
   int monthOfYear;
 
+  /**
+   *
+   *
+   * @param fromEpochMilli milliseconds @from
+   * @param toEpochMilli milliseconds @to
+   * @param solarTerms list of {@link SolarTerm}
+   */
   LunarMonth(long fromEpochMilli, long toEpochMilli, List<SolarTerm> solarTerms) {
     range = ValueRange.of(fromEpochMilli, toEpochMilli);
     preClimates = new ArrayList<>();
-    midClimates = Streamizr.of(solarTerms)
-      .filteringBy(t -> range.isValidValue(t.epochMilli))
-      .peekedAtBy(t -> {
+    midClimates = Streamr.stream(solarTerms).filter((t) -> range.isValidValue(t.epochMilli))
+      .map(t -> {
         if (t instanceof PreClimate) {
           preClimates.add(t);
 
@@ -78,20 +86,21 @@ public final class LunarMonth implements Comparable<LunarMonth>, Serializable {
         }
 
         return t;
-      }).sortedBy(Comparator.naturalOrder()).toList();
+      })
+      .filter(Objects::nonNull)
+      .sorted(Comparator.naturalOrder()).collect(Collectors.toList());
     november = midClimates.stream().anyMatch(t -> t.longitude == 270);
     intercalaryable = midClimates.isEmpty();
   }
 
   /**
+   * constructing the calendar of the year .
    *
-   *
-   * @param solarTerms
-   * @param firstDays
-   * @return
+   * @param solarTerms list of {@link SolarTerm}
+   * @param firstDays list of first day of months
+   * @return the calendar of the year
    */
-  @Nonnull
-  static List<LunarMonth> constructs(final @Nonnull List<SolarTerm> solarTerms, final @Nonnull List<Long> firstDays) {
+  static List<LunarMonth> constructs(final @lombok.NonNull List<SolarTerm> solarTerms, final @lombok.NonNull List<Long> firstDays) {
     // @formatter:off
     return monthOfYear(
       intercalaryze(IntStream.range(1, firstDays.size())
@@ -100,9 +109,14 @@ public final class LunarMonth implements Comparable<LunarMonth>, Serializable {
     // @formatter:on
   }
 
-  @Nonnull
-  private static List<LunarMonth> intercalaryze(final @Nonnull List<LunarMonth> lunarMonths) {
-    List<LunarMonth> novembers = Streamizr.of(lunarMonths).filteringBy(t -> t.november).toList();
+  /**
+   * constructing the calendar of the year .
+   *
+   * @param list of {@link LunarMonth}
+   * @return optimized lunarMonths
+   */
+  private static List<LunarMonth> intercalaryze(final @lombok.NonNull List<LunarMonth> lunarMonths) {
+    List<LunarMonth> novembers = Streamr.stream(lunarMonths).filter(t -> t.november).collect(Collectors.toList());
     for (int index = 1; index < novembers.size(); index++) {
       materialize(lunarMonths, novembers.get(index - 1), novembers.get(index));
     }
@@ -110,11 +124,23 @@ public final class LunarMonth implements Comparable<LunarMonth>, Serializable {
     return lunarMonths;
   }
 
-  private static void materialize(final @Nonnull List<LunarMonth> lunarMonths, final LunarMonth minimum, final LunarMonth maximum) {
-    materialize(lunarMonths.stream().filter(e -> minimum.compareTo(e) < 1 && maximum.compareTo(e) > 0).sorted().collect(Collectors.toList()));
+  /**
+   * constructing the calendar of the year .
+   *
+   * @param lunarMonths list of {@link LunarMonth}
+   * @param minimum first of winter solstice
+   * @param maximum last of winter solstice
+   */
+  private static void materialize(final @lombok.NonNull List<LunarMonth> lunarMonths, final LunarMonth minimum, final LunarMonth maximum) {
+    materialize(Streamr.stream(lunarMonths).filter((e) -> minimum.compareTo(e) < 1 && maximum.compareTo(e) > 0).sorted().collect(Collectors.toList()));
   }
 
-  private static void materialize(final @Nonnull List<LunarMonth> monthsOfWinterSolstice) {
+  /**
+   * constructing the calendar of the year .
+   *
+   * @param monthsOfWinterSolstice the list of months from november of last year to november of this year
+   */
+  private static void materialize(final @lombok.NonNull List<LunarMonth> monthsOfWinterSolstice) {
     final boolean hasIntercalary = monthsOfWinterSolstice.size() > 12;
     monthsOfWinterSolstice.stream().filter(e -> hasIntercalary && e.intercalaryable).findFirst().ifPresent(e -> e.intercalary = true);
     final int[] monthOfYear = {10};
@@ -124,21 +150,37 @@ public final class LunarMonth implements Comparable<LunarMonth>, Serializable {
     });
   }
 
-  @Nonnull
-  private static List<LunarMonth> monthOfYear(final @Nonnull List<LunarMonth> lunarMonths) {
-    final LunarMonth january = Streamizr.of(lunarMonths).filteringBy(e -> e.monthOfYear == 1).first(null);
-    ValueRange r = ValueRange.of(january.range.getMinimum(), Streamizr.of(lunarMonths).filteringBy(e -> e.monthOfYear == 12, e -> january.compareTo(e) < 0).first(january).range.getMinimum());
+  /**
+   * constructing the calendar of the year .
+   *
+   * @param list of {@link LunarMonth}
+   * @return optimized lunarMonths
+   */
+  private static List<LunarMonth> monthOfYear(final @lombok.NonNull List<LunarMonth> lunarMonths) {
+    final LunarMonth january = Streamr.firstOf(Streamr.stream(lunarMonths), (e) -> e.monthOfYear == 1);
+    // @formatter:off
+    ValueRange r = ValueRange.of(
+        january.range.getMinimum()
+      , Optional.ofNullable(Streamr.firstOf(Streamr.stream(lunarMonths), ((Predicate<LunarMonth>) (e) -> e.monthOfYear == 12).and((e) -> january.compareTo(e) < 0))).orElse(january).range.getMinimum()
+    );
+    // @formatter:on
 
-    return Streamizr.of(lunarMonths).filteringBy(e -> r.isValidValue(e.range.getMinimum())).toList();
+    return Streamr.toList(Streamr.stream(lunarMonths).filter((e) -> r.isValidValue(e.range.getMinimum())));
   }
 
+  /**
+   * {@inheritDoc}
+   */
   @Override
   public int compareTo(LunarMonth o) {
     return Long.compare(range.getMinimum(), o.range.getMinimum());
   }
 
+  /**
+   * {@inheritDoc}
+   */
   @Override
   public String toString() {
-    return Jsonifier.serializeLazy(this);
+    return Jsonifier.serialize(this);
   }
 }
